# zstd-rs

./: Cargo.toml
src/: dict.rs  lib.rs
src/block/: compressor.rs  decompressor.rs
src/stream/: mod.rs  raw.rs
src/stream/read/: mod.rs
src/stream/write/: mod.rs
zstd-safe/: Cargo.toml
zstd-safe/src/: lib.rs
zstd-safe/zstd-sys/: Cargo.toml  build.rs
