[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "Binding for the zstd compression library."
documentation = "https://docs.rs/zstd"
keywords = ["zstd", "zstandard", "compression"]
categories = ["compression", "api-bindings"]
license = "MIT"
name = "zstd-legacy-mononoke"
repository = "https://github.com/gyscos/zstd-rs"
version = "0.8.0+zstd.1.4.9"
exclude = ["assets/*.zst"]
readme = "Readme.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["experimental"]

[badges]
travis-ci = { repository = "gyscos/zstd-rs" }

[dependencies]
zstd-legacy-mononoke-safe = { path = "./zstd-safe", version = "=4.0.0", default-features = false, features=["std"]}
tokio-io = { version = "0.1", optional = true }
futures = { version = "0.1", optional = true }

[dev-dependencies]
clap = "2.0"
partial-io = { version = "0.3", features=["quickcheck", "tokio"] }
quickcheck = "0.6"
humansize = "1.0"
walkdir = "2.2"

[features]
default = ["legacy"]
tokio = ["tokio-io", "futures"]

bindgen = ["zstd-legacy-mononoke-safe/bindgen"]
debug = ["zstd-legacy-mononoke-safe/debug"]
legacy = ["zstd-legacy-mononoke-safe/legacy"]
pkg-config = ["zstd-legacy-mononoke-safe/pkg-config"]
wasm = []
zstdmt = ["zstd-legacy-mononoke-safe/zstdmt"]
experimental = ["zstd-legacy-mononoke-safe/experimental"]
thin = ["zstd-legacy-mononoke-safe/thin"]
